--- a/apl/ejercicio2/Makefile
+++ b/apl/ejercicio2/Makefile
@@ -1,7 +1,7 @@
 all: clean ejercicio clear
 
 ejercicio: ejercicio2.cpp
-	g++ ejercicio2.cpp -o ejercicio2 -pthread
+	g++ ejercicio2.cpp -o ejercicio2 -pthread -std=c++17
 
 clean:
 	rm -f ejercicio2
