--- a/apl/docker-compose.yml
+++ b/apl/docker-compose.yml
@@ -10,15 +10,16 @@ services:
     command: ["./servidor", "-p", "5000", "-u", "10", "-a", "frases.txt"]
     stdin_open: true
     tty: true
+    container_name: ahorcado_servidor
     
   cliente5:
     build:
       context: .
       dockerfile: Dockerfile
-    depends_on:
-      - ejercicio5
-    command: ["./cliente", "-n", "jugador1", "-s", "ejercicio5", "-p", "5000"]
+    command: ["sh", "-c", "sleep 3 && ./cliente -n jugador -s ahorcado_servidor -p 5000"]
     stdin_open: true
     tty: true
+    depends_on:
+      - ejercicio5
     profiles:
       - cliente
