--- a/apl/ejercicio5/Makefile
+++ b/apl/ejercicio5/Makefile
@@ -1,15 +1,7 @@
-all: Ejercicio5
-
-Ejercicio5: clean servidor cliente
+all: servidor cliente
 
 servidor: servidor.cpp
 	g++ servidor.cpp -o servidor -pthread
 
 cliente: cliente.cpp
 	g++ cliente.cpp -o cliente
-
-clean:
-	rm -f servidor cliente
-
-clear:
-	clear
