--- a/apl/ejercicio3/Makefile
+++ b/apl/ejercicio3/Makefile
@@ -1,13 +1,7 @@
-all: clean servidor cliente
+all: servidor cliente
 
 servidor: servidor.cpp
 	g++ servidor.cpp -o servidor
 
 cliente: cliente.cpp
 	g++ cliente.cpp -o cliente
-
-clean:
-	rm -f servidor cliente
-
-clear:
-	clear
