--- a/apl/ejercicio4/Makefile
+++ b/apl/ejercicio4/Makefile
@@ -1,13 +1,7 @@
-all: clean servidor cliente
+all: servidor cliente
 
 servidor: servidor.cpp
 	g++ servidor.cpp -o servidor -pthread
 
 cliente: cliente.cpp
 	g++ cliente.cpp -o cliente
-
-clean:
-	rm -f servidor cliente
-
-clear:
-	clear
